Updated api-docs, readme and ensured deposits include cubeId and customerId
