# api-docs.yaml
@@ -4,12 +4,13 @@ info:
   description: Service to support recycling machine
   version: 1.0.0
 paths:
-  /customers/{customerId}/accounts/{accountId]/deposits:
+  /customers/{customerId}/accounts/{accountId}/deposits:
     post:
       summary: Record deposit of a recycled item
       description: api that supports recording deposit of recycled item
       parameters:
         - $ref: '#/components/parameters/customerId'
+        - $ref: '#/components/parameters/accountId'
         - $ref: '#/components/parameters/xCubeIdParam'
       requestBody:
         required: true
@@ -20,12 +21,12 @@ paths:
       responses:
         200:
           description: OK
-  /customers/{customerId}/accounts/{accountId}/deposits:
     get:
       summary: Retreive all deposits for a customer
       description: api that supports recording deposit of recycled item
       parameters:
         - $ref: '#/components/parameters/customerId'
+        - $ref: '#/components/parameters/accountId'
         - $ref: '#/components/parameters/xCubeIdParam'
       responses:
         200:
@@ -42,6 +43,7 @@ paths:
       description: api that supports recording deposit of recycled item
       parameters:
         - $ref: '#/components/parameters/customerId'
+        - $ref: '#/components/parameters/accountId'
         - $ref: '#/components/parameters/xCubeIdParam'
       requestBody:
         required: true
@@ -59,55 +61,64 @@ paths:
       description: api that supports recording deposit of recycled item
       parameters:
         - $ref: '#/components/parameters/customerId'
+        - $ref: '#/components/parameters/accountId'
         - $ref: '#/components/parameters/xCubeIdParam'
       responses:
         200:
           description: OK
 
 components:
-    parameters:
-      customerId:
-        name: customerId
-        in: path
-        required: true
-        description: customer identifier
-        schema:
+  parameters:
+    customerId:
+      name: customerId
+      in: path
+      required: true
+      description: customer identifier
+      schema:
+        type: string
+        format: int
+    accountId:
+      name: accountId
+      in: path
+      required: true
+      description: account identifier
+      schema:
+        type: string
+        format: int
+    xCubeIdParam:
+      name: xCubeId
+      in: header
+      required: true
+      description: cube identifier
+      schema:
+        type: string
+        format: uuid
+  schemas:
+    DepositItem:
+      title: Item deposited
+      type: object
+      properties:
+        cubeId:
           type: string
-          format: int
-      acountId:
-        name: accountId
-        in: path
-        required: true
-        description: account identifier
-        schema:
+          description: unique id for the cube
+          example: "12345"
+        customerId:
           type: string
-          format: int
-      xCubeIdParam:
-        name: xCubeId
-        in: header
-        required: true
-        description: cube identifier
-        schema:
+          description: id of customer making the deposit
+          example: 0
+        itemSize:
           type: string
-          format: uuid
-    schemas:
-      DepositItem:
-        title: Item deposited
-        type: object
-        properties:
-          itemSize:
-            type: string
-            description: item to be recyled eg. small-bottle
-            example: "small | large"
-            enum:
-              - small
-              - large
-          dateTime:
-            type: string
-            format: date-time
-            description: date and time item was recycled
-            example: "2017-07-21T17:32:28Z"
-        required:
-          - text
+          description: item to be recyled eg. small-bottle
+          example: "small | large"
+          enum:
+            - small
+            - large
+        dateTime:
+          type: string
+          format: date-time
+          description: date and time item was recycled
+          example: "2017-07-21T17:32:28Z"
+      required:
+        - text
 
 
